[tool.poetry]
name = "research-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.6.12"
py-evm = "^0.3.0-alpha.20"
jupyter = "^1.0.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.2.0"}
web3 = "^5.15.0"
eth-tester = "^0.5.0-beta.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
